[package]
name = "rust-grpc-example"
version = "0.1.0"
edition = "2021"
description = "A simple gRPC example with Rust"
license = "MIT"


[dependencies]
tonic = "0.6.2"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
prost = "0.9"

[lib]
path = "./src/lib.rs"

[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[build-dependencies]
tonic-build = "0.6.2"
